<resources>
    <string name="app_name">GosDrm</string>

    <!--登陆-->
    <string name="file_name">mysp</string>

    <!--直播-->
    <string name="formatTime">hh:mm</string>
    <string name="formatDate">yyyy-MM-dd</string>
    <string name="formatWeek">EEEE</string>

    <!--导航-->
    <string name="home">首页</string>
    <string name="live">直播</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <!--设置-->
    <string name="setting_changeuser">切换账户</string>
    <string name="setting_title">喜好设置</string>
    <string name="setting_autoSource">默认频道源：</string>
    <string name="setting_vod">点播</string>
    <string name="setting_live">直播</string>

    <string name="setting_item_autoSource">默认频道源</string>
    <string name="setting_item_serverInfo">服务器设置</string>
    <string name="setting_item_theme">背景主题</string>
    <string name="setting_item_changeUser">切换账户</string>
    <string name="setting_item_import">文件导入</string>

    <string name="setting_import_live">直播列表</string>
    <string name="setting_import_vod">点播列表</string>
    <string name="setting_import_da">DA配置</string>


    <!--关于-->
    <string name="about_author">\@wildwolf\n2017</string>
    <string name="version">GosDrm 1.0.1</string>
</resources>