<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="gos.gosdrm.activity.HomeActivity">

    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0">

        <RadioButton
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@drawable/home_null"
            android:background="@drawable/radio_bg"
            android:text="@string/home"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/tab_live"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@drawable/home_null"
            android:background="@drawable/radio_bg"
            android:text="@string/live"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/tab_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@drawable/home_null"
            android:background="@drawable/radio_bg"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/tab_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/home_null"
            android:gravity="center"
            android:text="@string/about"
            android:background="@drawable/radio_bg"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"

        app:layout_constraintBottom_toTopOf="@+id/tab_menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--<ImageButton
        android:id="@+id/home_image"
        android:layout_width="630dp"
        android:layout_height="340dp"
        app:layout_constraintTop_toTopOf="@+id/home"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/home_tv"
        app:layout_constraintBottom_toTopOf="@+id/recommend"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/home"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="640dp"
        android:layout_height="350dp"
        android:background="@drawable/tv_bj"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.24000001"
        android:layout_marginLeft="53dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/newest"
        android:layout_width="530dp"
        android:layout_height="350dp"
        android:background="@drawable/tv_bj"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/home"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/home"
        android:layout_marginLeft="5dp"
        app:layout_constraintHorizontal_bias="0.005" />

    <ImageView
        android:id="@+id/recommend"
        android:layout_width="640dp"
        android:layout_height="170dp"
        android:background="@drawable/tv_bj"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/home"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/home"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/other"
        android:layout_width="530dp"
        android:layout_height="170dp"
        android:background="@drawable/tv_bj"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/recommend"
        app:layout_constraintTop_toBottomOf="@+id/newest"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />-->

</android.support.constraint.ConstraintLayout>